Language: #add missing and #fix legacy language terms

--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -29170,3 +29170,33 @@ msgstr "Link is not valid"
 
 msgid "Toggle visibility"
 msgstr "Toggle visibility"
+
+msgid "Unmark favorite"
+msgstr "Unmark favorite"
+
+msgid "Mark favorite"
+msgstr "Mark favorite"
+
+msgid "Register student"
+msgstr "Register student"
+
+msgid "Ends tomorrow"
+msgstr "Ends tomorrow"
+
+msgid "Ends today"
+msgstr "Ends today"
+
+msgid "Write a short and striking course name, For example: Innovation Management"
+msgstr "Write a short and striking course name, For example: Innovation Management"
+
+msgid "Introduction updated successfully!"
+msgstr "Introduction updated successfully!"
+
+msgid "Introduction created successfully!"
+msgstr "Introduction created successfully!"
+
+msgid "Free"
+msgstr "Free"
+
+msgid "No description available"
+msgstr "No description available"
