--- a/translations/messages.fr.po
+++ b/translations/messages.fr.po
@@ -4628,8 +4628,8 @@ msgstr "Cette classe n'est inscrite à aucun cours"
 msgid "tool"
 msgstr "outil"
 
-msgid "number of items"
-msgstr "nombre d'éléments"
+msgid "Number of items"
+msgstr "Nombre d'éléments"
 
 msgid "Documents and folders"
 msgstr "Documents et dossiers"
@@ -9744,8 +9744,8 @@ msgstr "Pas de lien visité"
 msgid "No document downloaded"
 msgstr "Pas de document téléchargé"
 
-msgid "clicks"
-msgstr "clics"
+msgid "%d clicks"
+msgstr "%d clics"
 
 msgid "Search results"
 msgstr "Résultats de la recherche"
@@ -9890,7 +9890,7 @@ msgstr "heures"
 msgid "minutes"
 msgstr "minutes"
 
-msgid "Documented created"
+msgid "Document created"
 msgstr "Document créé"
 
 msgid "The forum has been added"
