--- a/translations/messages.it.po
+++ b/translations/messages.it.po
@@ -4512,8 +4512,8 @@ msgstr "La classe non è iscritta ad alcun corso"
 msgid "tool"
 msgstr "strumento"
 
-msgid "number of items"
-msgstr "numero di elementi"
+msgid "Number of items"
+msgstr "Numero di elementi"
 
 msgid "Documents and folders"
 msgstr "Documenti e cartelle"
@@ -9528,8 +9528,8 @@ msgstr "Nessun collegamento visitato"
 msgid "No document downloaded"
 msgstr "Nessun documento scaricato"
 
-msgid "clicks"
-msgstr "Click"
+msgid "%d clicks"
+msgstr "%d click"
 
 msgid "Search results"
 msgstr "Risultati della ricerca"
@@ -9672,7 +9672,7 @@ msgstr "ore"
 msgid "minutes"
 msgstr "minuti"
 
-msgid "Documented created"
+msgid "Document created"
 msgstr "Documento creato"
 
 msgid "The forum has been added"
