--- a/translations/messages.sr.po
+++ b/translations/messages.sr.po
@@ -4504,7 +4504,7 @@ msgstr "Ovaj razred nije prijavljen na kurs"
 msgid "tool"
 msgstr "alat"
 
-msgid "number of items"
+msgid "Number of items"
 msgstr "Broj stavki"
 
 msgid "Documents and folders"
@@ -9520,7 +9520,7 @@ msgstr ""
 msgid "No document downloaded"
 msgstr ""
 
-msgid "clicks"
+msgid "%d clicks"
 msgstr ""
 
 msgid "Search results"
@@ -9664,7 +9664,7 @@ msgstr ""
 msgid "minutes"
 msgstr ""
 
-msgid "Documented created"
+msgid "Document created"
 msgstr ""
 
 msgid "The forum has been added"
