--- a/translations/messages.tr.po
+++ b/translations/messages.tr.po
@@ -4503,7 +4503,7 @@ msgstr "Bu sınıf herhangi bir derse kayıtlı değil"
 msgid "tool"
 msgstr "araç"
 
-msgid "number of items"
+msgid "Number of items"
 msgstr "İçerik sayısı"
 
 msgid "Documents and folders"
@@ -9519,7 +9519,7 @@ msgstr ""
 msgid "No document downloaded"
 msgstr ""
 
-msgid "clicks"
+msgid "%d clicks"
 msgstr ""
 
 msgid "Search results"
@@ -9663,7 +9663,7 @@ msgstr ""
 msgid "minutes"
 msgstr ""
 
-msgid "Documented created"
+msgid "Document created"
 msgstr ""
 
 msgid "The forum has been added"
