--- a/translations/messages.he.po
+++ b/translations/messages.he.po
@@ -4512,7 +4512,7 @@ msgstr "שיעור זה אינו רשום בקורס"
 msgid "tool"
 msgstr "כלי"
 
-msgid "number of items"
+msgid "Number of items"
 msgstr "מספר פריטים"
 
 msgid "Documents and folders"
@@ -9528,8 +9528,8 @@ msgstr "לא ביקר בקישור"
 msgid "No document downloaded"
 msgstr "לא הורד מסמך"
 
-msgid "clicks"
-msgstr "קליקים"
+msgid "%d clicks"
+msgstr "קליקים%d "
 
 msgid "Search results"
 msgstr "תוצאות חיפוש"
@@ -9672,7 +9672,7 @@ msgstr "שעות"
 msgid "minutes"
 msgstr "דקות"
 
-msgid "Documented created"
+msgid "Document created"
 msgstr "תיעוד נוצר"
 
 msgid "The forum has been added"
