--- a/translations/messages.pl.po
+++ b/translations/messages.pl.po
@@ -4504,7 +4504,7 @@ msgstr "Ta klasa nie jest zapisana na kurs"
 msgid "tool"
 msgstr "narzędzie"
 
-msgid "number of items"
+msgid "Number of items"
 msgstr "liczba pozycji (przedmiotów)"
 
 msgid "Documents and folders"
@@ -9520,8 +9520,8 @@ msgstr "Brak odwiedzonych adresów"
 msgid "No document downloaded"
 msgstr "Brak pobranych dokumentów"
 
-msgid "clicks"
-msgstr "kliknięcia"
+msgid "%d clicks"
+msgstr "%d kliknięcia"
 
 msgid "Search results"
 msgstr "Wyniki wyszukiwania"
@@ -9664,7 +9664,7 @@ msgstr "godziny"
 msgid "minutes"
 msgstr "minuty"
 
-msgid "Documented created"
+msgid "Document created"
 msgstr "Dokument został utworzony"
 
 msgid "The forum has been added"
